chore: rendering blogs

--- a/css/style.css
+++ b/css/style.css
@@ -666,8 +666,9 @@ section {
     color: #78472C;
 }
 
-.blog-img {
-    width: 97%;
+.blog-image {
+    width: 360px;
+    height: auto;
 }
 
 .blog-time {
