--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,24 @@ header {
     .nav-menu {
         width: 40%;
     }
-}
+
     .nav-menu ul {
         font-size: 20px;
     }
+}
+
+@media(max-width: 1100px) {
+    header {
+        /* display: none; */
+    }
+    .nav-menu {
+        width: 45%;
+    }
+    
+    .nav-menu ul {
+        font-size: 20px;
+    }
+}
 
 @media(max-width: 1000px) {
     header {
@@ -88,6 +102,21 @@ header {
         width: 50%;
     }
 }
+
+@media(max-width: 900px) {
+    header {
+        /* display: none; */
+    }
+
+    .nav-menu{
+        width: 50%;
+    }
+
+    .nav-menu ul {
+        font-size: 18px;
+    }
+}
+
 @media(min-width: 801px) {
     .nav-menu {
         display: block;
@@ -949,8 +978,11 @@ th, tr, td {
 
 .admin2-holder  textarea {
     width: 100%;
-    border: 2px solid #a7b5be;
+    font-size: 20px;
+    padding: 10px;
     color: #78472C;
+    border: 2px solid #a7b5be;
+    font-family: 'Poppins', sans-serif;
 }
 
 .admin2-holder  input {
@@ -1134,14 +1166,37 @@ footer {
 
 /* ------------------ error handling ------------------ */
 #error {
-    width: 80%;
-    margin: 0 0 10px 50px;
-    padding: 10px;
-    font-size: 25px;
+    width: 90%;
+    margin: 0px 50px;
+    /* padding: 10px; */
+    font-size: 20px;
     text-align: justify;
-    color: #fff;
-    background: #ff0000;
+    color:#ff0000;
     border-radius: 10px;
+}
+
+#signup-hint {
+    width: 90%;
+    margin: 0px 50px 10px 50px;
+    color:#ff0000;
+}
+
+
+/* ------------------ new-user ------------------ */
+#new-user {
+    width: 80%;
+    margin: 50px auto;
+}
+
+#create-btn, #profile-infos {
+    width: 50%;
+    font-size: 22px;
+    color: #e8491d;
+    background: #a7b5be;
+    border: 3px solid #a7b5be;
+    border-radius: 8px;
+    margin: 20px auto 50px auto;
+    padding: 20px 0;
 }
 
 
