--- a/css/style.css
+++ b/css/style.css
@@ -1264,3 +1264,19 @@ footer {
     border: 2px solid #a7b5be;
     background: #a7b5be;
 }
+
+.contact-form #submit-btn:hover[type="submit"],
+#create-btn:hover,
+#profile-infos:hover,
+.edit-blog:hover,
+.delete-blog:hover {
+	opacity: 0.7;
+}
+
+.contact-form #submit-btn:active[type="submit"],
+#create-btn:active,
+#profile-infos:active,
+.edit-blog:active,
+.delete-blog:active {
+			background: red;
+}
